--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -57,6 +57,10 @@ input[type=checkbox] {
     width: 100%;
 }
 
-.admin-preview {
+.form-preview {
     max-width: 100%;
+}
+
+.list-preview {
+    max-width: 320px;
 }
